Fortran-glpk/src/glpk.f90

module glpk
    use iso_c_binding
    implicit none
        interface
            function glp_create_prob() bind(C,name="glp_create_prob")
                use iso_c_binding
                    type(c_ptr) :: glp_create_prob
            end function
            subroutine glp_set_prob_name(P,name) bind(C,name="glp_set_prob_name")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: name(*)
            end subroutine
            subroutine glp_set_obj_name(P,name) bind(C,name="glp_set_obj_name")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: name(*)
            end subroutine
            subroutine glp_set_obj_dir(P,dir) bind(C,name="glp_set_obj_dir")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: dir
            end subroutine
            function glp_add_rows(P,nrs) bind(C,name="glp_add_rows")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: nrs
                    integer(c_int) :: glp_add_rows
            end function
            function glp_add_cols(P,ncs) bind(C,name="glp_add_cols")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: ncs
                    integer(c_int) :: glp_add_cols
            end function
            subroutine glp_set_row_name(P,i,name) bind(C,name="glp_set_row_name")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    character(c_char) :: name(*)
            end subroutine
            subroutine glp_set_col_name(P,j,name) bind(C,name="glp_set_col_name")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    character(c_char) :: name(*)
            end subroutine
            subroutine glp_set_row_bnds(P,i,type,lb,ub) bind(C,name="glp_set_row_bnds")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    integer(c_int), value :: type
                    real(c_double), value  :: lb
                    real(c_double), value  :: ub
            end subroutine
            subroutine glp_set_col_bnds(P,i,type,lb,ub) bind(C,name="glp_set_col_bnds")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    integer(c_int), value :: type
                    real(c_double), value  :: lb
                    real(c_double), value  :: ub
            end subroutine
            subroutine glp_set_obj_coef(P,j,coef) bind(C,name="glp_set_obj_coef")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double), value :: coef
            end subroutine
            subroutine glp_load_matrix(P,ne,ia,ja,ar) bind(C,name="glp_load_matrix")
            use iso_c_binding
                type(c_ptr), value :: P
                integer(c_int), value :: ne
                integer(c_int) :: ia(*)
                integer(c_int) :: ja(*)
                real(c_double) :: ar(*)
            end subroutine
            function glp_check_dup(m,n,ne,ia,ja) bind(C,name="glp_check_dup")
                use iso_c_binding
                    integer(c_int), value :: m
                    integer(c_int), value :: n
                    integer(c_int), value :: ne
                    integer(c_int) :: ia(*)
                    integer(c_int) :: ja(*)
                    integer(c_int) :: glp_check_dup
            end function
            subroutine glp_sort_matrix(P) bind(C,name="glp_sort_matrix")
                use iso_c_binding
                    type(c_ptr), value :: P
            end subroutine
            subroutine glp_del_rows(P,nrs,num) bind(C,name="glp_del_rows")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: nrs
                    integer(c_int) :: num(*)
            end subroutine
            subroutine glp_del_cols(P,ncs,num) bind(C,name="glp_del_cols")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: ncs
                    integer(c_int) :: num(*)
            end subroutine
            subroutine glp_copy_prob(dest,prob,names) bind(C,name="glp_copy_prob")
                use iso_c_binding
                    type(c_ptr), value :: dest
                    type(c_ptr), value :: prob
                    integer(c_int), value :: names
            end subroutine
            subroutine glp_erase_prob(P) bind(C,name="glp_erase_prob")
                use iso_c_binding
                    type(c_ptr), value :: P
            end subroutine
            subroutine glp_delete_prob(P) bind(C,name="glp_delete_prob")
                use iso_c_binding
                    type(c_ptr), value :: P
            end subroutine
            function glp_get_prob_name(P) bind(C,name="glp_get_prob_name")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: glp_get_prob_name
            end function
            function glp_get_obj_name(P) bind(C,name="glp_get_obj_name")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: glp_get_obj_name
            end function
            function glp_get_obj_dir(P) bind(C,name="glp_get_obj_dir")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_obj_dir
            end function
            function glp_get_num_rows(P) bind(C,name="glp_get_num_rows")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_num_rows
            end function
            function glp_get_num_cols(P) bind(C,name="glp_get_num_cols")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_num_cols
            end function
            function glp_get_row_name(P,i) bind(C,name="glp_get_row_name")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    character(c_char) :: glp_get_row_name
            end function
            function glp_get_col_name(P,j) bind(C,name="glp_get_col_name")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    character(c_char) :: glp_get_col_name
            end function
            function glp_get_row_type(P,i) bind(C,name="glp_get_row_type")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    integer(c_int) :: glp_get_row_type
            end function
            function glp_get_row_lb(P,i) bind(C,name="glp_get_row_lb")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double) :: glp_get_row_lb
            end function
            function glp_get_row_ub(P,i) bind(C,name="glp_get_row_ub")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double) :: glp_get_row_ub
            end function
            function glp_get_col_type(P,j) bind(C,name="glp_get_col_type")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    integer(c_int) :: glp_get_col_type
            end function
            function glp_get_col_lb(P,j) bind(C,name="glp_get_col_lb")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_get_col_lb
            end function
            function glp_get_col_ub(P,j) bind(C,name="glp_get_col_ub")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_get_col_ub
            end function
            function glp_get_obj_coef(P,j) bind(C,name="glp_get_obj_coef")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_get_obj_coef
            end function
            function glp_get_num_nz(P) bind(C,name="glp_get_num_nz")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_num_nz
            end function
            function glp_get_mat_row(P,i,ind,val) bind(C,name="glp_get_mat_row")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    integer(c_int) :: ind(*)
                    real(c_double) :: val(*)
                    integer(c_int) :: glp_get_mat_row
            end function
            function glp_get_mat_col(P,j,ind,val) bind(C,name="glp_get_mat_col")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    integer(c_int) :: ind(*)
                    real(c_double) :: val(*)
                    integer(c_int) :: glp_get_mat_col
            end function
            subroutine glp_create_index(P) bind(C,name="glp_create_index")
                use iso_c_binding
                    type(c_ptr), value :: P
            end subroutine
            function glp_find_row(P,name) bind(C,name="glp_find_row")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: name(*)
                    integer(c_int) :: glp_find_row
            end function
            function glp_find_col(P,name) bind(C,name="glp_find_col")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: name(*)
                    integer(c_int) :: glp_find_col
            end function
            subroutine glp_delete_index(P) bind(C,name="glp_delete_index")
                use iso_c_binding
                    type(c_ptr), value :: P
            end subroutine
            subroutine glp_set_rii(P,i,rii) bind(C,name="glp_set_rii")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double), value :: rii
            end subroutine
            subroutine glp_set_sjj(P,j,sjj) bind(C,name="glp_set_sjj")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double), value :: sjj
            end subroutine
            function glp_get_rii(P,i) bind(C,name="glp_get_rii")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double) :: glp_get_rii
            end function
            function glp_get_sjj(P,j) bind(C,name="glp_get_sjj")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_get_sjj
            end function
            subroutine glp_scale_prob(P,flags) bind(C,name="glp_scale_prob")
                use iso_c_binding
